--- a/style.css
+++ b/style.css
@@ -160,7 +160,7 @@ ul li {
     display: grid;
     grid-template-columns: 100%;
     grid-template-rows: repeat(5,1fr);
-    background-color: grey;
+    background-color: rgb(241, 241, 241);
     border-radius: 15px;
     width: 100%;
     height: 200px;
